# eg-build-container

./: Dockerfile  Jenkinsfile  README.md
src/eg_otway_portable @ 29dd137/: .gitignore  CMakeLists.txt  README.md  doxygen.config
src/eg_otway_portable @ 29dd137/.github/: CODEOWNERS
src/eg_otway_portable @ 29dd137/.github/workflows/: main.yml
src/eg_otway_portable @ 29dd137/drivers/: FlashLog.h  FlashScratchpad.h  FlashStorageBase.cpp  FlashStorageBase.h
src/eg_otway_portable @ 29dd137/event_loop/: BareMetalEventLoop.h  FreeRTOSEventLoop.h  ThreadEventLoop.cpp  ThreadEventLoop.h
src/eg_otway_portable @ 29dd137/freertos/: FreeRTOSQueue.h  FreeRTOSThread.h
src/eg_otway_portable @ 29dd137/interfaces/: IADCDriver.h  IAnalogueInput.h  IAnalogueOutput.h  IBackupRam.h  ICANDriver.h  ICrcDriver.h  IDigitalInput.h  IDigitalOutput.h  IFlashMemory.h  IFlashStorage.h  IHardwareTimer.h  II2CDriver.h  IInterCoreCriticalSection.h  IInterCoreEventSink.h  IInterCoreEventSource.h  IPWMx4Driver.h  IPwmManager.h  IRTCDriver.h  IRtcManager.h  ISMBusDriver.h  ISPIDriver.h  ISystemReset.h  IUARTDriver.h
src/eg_otway_portable @ 29dd137/interfaces/Test/: DummyHardwareTimer.h  TestDigitalInput.h  TestDigitalOutput.h  TestSPIDriver.h
src/eg_otway_portable @ 29dd137/logging/: Assert.cpp  Assert.h  ILoggerBackend.h  Logger.cpp  Logger.h  NullLoggerBackend.h  UARTLoggerBackend.h
src/eg_otway_portable @ 29dd137/private/: README.md
src/eg_otway_portable @ 29dd137/private/baremetal/signals/: Callback.h  InterruptHandler.h  Signal.cpp  Signal.h  SignalBase.h  SignalEvent.h  SignalNArg.h  SignalProxy.h
src/eg_otway_portable @ 29dd137/private/baremetal/timers/: Timer.cpp  Timer.h
src/eg_otway_portable @ 29dd137/private/baremetal/utilities/: ErrorHandler.cpp
src/eg_otway_portable @ 29dd137/private/linux/signals/: Callback.h  Signal.cpp  Signal.h  SignalBase.h  SignalEvent.h  SignalNArg.h  SignalProxy.h
src/eg_otway_portable @ 29dd137/private/linux/timers/: Timer.cpp  Timer.h
src/eg_otway_portable @ 29dd137/private/linux/utilities/: ErrorHandler.cpp
src/eg_otway_portable @ 29dd137/signals/: Callback.h  InterruptHandler.h  Signal.cpp  Signal.h
src/eg_otway_portable @ 29dd137/signals/docs/: Migrating-callbacks-from-inheritance-to-composition.md  README-original.md  Signals-and-event-loops.drawio
src/eg_otway_portable @ 29dd137/test/: .gitignore  .lcovrc  CMakeLists.txt  README.md  TestBlockBuffer.cpp  TestCRC.cpp  TestCallback.cpp  TestDisableInterrupts.cpp  TestEnumUtils.cpp  TestFlashLog.cpp  TestFlashStorageBase.cpp  TestLogger.cpp  TestMemoryPool.cpp  TestMockFlashMemory.cpp  TestRingBuffer.cpp  TestSignal.cpp  TestSignalQueue.cpp  TestSignalThread.cpp  TestSingleThreadedUtils.cpp  TestSingleThreadedUtils.h  TestTimerBareMetal.cpp
src/eg_otway_portable @ 29dd137/test/mock/: MockCriticalSection.cpp  MockDisableInterrupts.cpp  MockFlashMemory.h
src/eg_otway_portable @ 29dd137/test/mock/event_loop/: TestEventLoop.h
src/eg_otway_portable @ 29dd137/timers/: ITimer.h  Timer.cpp  Timer.h
src/eg_otway_portable @ 29dd137/utilities/: BlockBuffer.h  CRC.h  CriticalSection.h  DisableInterrupts.h  EnumUtils.h  ErrorHandler.cpp  ErrorHandler.h  MemoryPool.h  NonCopyable.h  RingBuffer.h  Unreachable.h
src/eg_otway_stm32 @ 1b9ae87/: CMakeLists.txt  README.md
src/eg_otway_stm32 @ 1b9ae87/.github/: CODEOWNERS
src/eg_otway_stm32 @ 1b9ae87/g4/: CMakeLists.txt
src/eg_otway_stm32 @ 1b9ae87/g4/drivers/: ADCDriver.cpp  ADCDriver.h  AnalogueInput.cpp  AnalogueInput.h  DigitalInput.cpp  DigitalInputPolled.cpp  DigitalOutput.cpp  DigitalOutput.h  FDCANDriver.cpp  FDCANDriver.h  HardwareTimer.cpp  HardwareTimer.h  I2CDriver.cpp  I2CDriver.h  I2CDriverBlocking.cpp  I2CDriverBlocking.h  PWMx4Driver.cpp  PWMx4Driver.h  RTCDriver.cpp  RTCDriver.h  SMBusDriver.cpp  SMBusDriver.h  SPIDriverDMA.cpp  SPIDriverDMA.h  UARTDriver.cpp  UARTDriver.h  UARTDriverDMA.cpp  UARTDriverDMA.h  UARTDriverUSB.cpp  UARTDriverUSB.h  WatchdogTimer.cpp  WatchdogTimer.h
src/eg_otway_stm32 @ 1b9ae87/g4/drivers/helpers/: ADCHelpers.cpp  ADCHelpers.h  CANHelpers.cpp  CANHelpers.h  DMAHelpers.cpp  DMAHelpers.h  GPIOHelpers.cpp  GPIOHelpers.h  GlobalDefs.h  I2CHelpers.cpp  I2CHelpers.h  SPIHelpers.cpp  SPIHelpers.h  TIMHelpers.cpp  TIMHelpers.h  UARTHelpers.cpp  UARTHelpers.h
src/eg_otway_stm32 @ 1b9ae87/g4/utilities/: CriticalSection.cpp
src/eg_otway_stm32 @ 1b9ae87/h7/: CMakeLists.txt
src/eg_otway_stm32 @ 1b9ae87/h7/drivers/: ADCDriverBlocking.cpp  ADCDriverBlocking.h  ADCDriverMultiChannel.cpp  ADCDriverMultiChannel.h  AnalogueInputBlocking.cpp  AnalogueInputBlocking.h  AnalogueOutput.cpp  AnalogueOutput.h  BackupRam.h  BootSequence.cpp  BootSequence.h  CrcDriver.cpp  CrcDriver.h  CycleCounter.cpp  CycleCounter.h  DigitalInput.cpp  DigitalInput.h  DigitalInputPolled.cpp  DigitalOutput.cpp  DigitalOutput.h  FDCANDriver.cpp  FDCANDriver.h  FlashMemory.h  HardwareTimer.cpp  HardwareTimer.h  I2CDriver.cpp  I2CDriver.h  I2CDriverSequence.cpp  I2CDriverSequence.h  InterCoreCriticalSection.cpp  InterCoreCriticalSection.h  InterCoreEventSink.cpp  InterCoreEventSink.h  InterCoreEventSource.cpp  InterCoreEventSource.h  PWMx4Driver.cpp  PWMx4Driver.h  SPIDriverDMA.cpp  SPIDriverDMA.h  SystemReset.h  (+4 more)
src/eg_otway_stm32 @ 1b9ae87/h7/drivers/helpers/: ADCHelpers.cpp  ADCHelpers.h  CANHelpers.cpp  CANHelpers.h  DMAHelpers.cpp  (+14 more)
src/eg_otway_stm32 @ 1b9ae87/h7/utilities/: AtomicReadModifyWrite.h  CriticalSection.cpp  DisableInterrupts.cpp
src/eg_otway_stm32 @ 1b9ae87/u5/: CMakeLists.txt
src/eg_otway_stm32 @ 1b9ae87/u5/drivers/: ADCDriver.cpp  ADCDriver.h  AnalogueInput.cpp  AnalogueInput.h  DigitalInput.cpp  DigitalInput.h  DigitalInputPolled.cpp  DigitalInputPolled.h  DigitalOutput.cpp  DigitalOutput.h  FlashInternal.cpp  FlashInternal.h  FlashMemory.cpp  FlashMemory.h  HardwareTimer.cpp  HardwareTimer.h  I2CDriver.cpp  I2CDriver.h  PwmManager.cpp  PwmManager.h  RtcManager.cpp  RtcManager.h  SpiDriverDMA.cpp  SpiDriverDMA.h  UARTDriver.cpp  UARTDriver.h
src/eg_otway_stm32 @ 1b9ae87/u5/utilities/: DisableInterrupts.cpp
(+16 files in other folders)
